Update MCP Gateway Core version to 0.5.9 and add Java 17 compatibility checks